force-app/main/default/objects/Invoice_Generator_Setting__mdt/Invoice_Generator_Setting__mdt.object-meta.xml
<CustomObject>
    <description>To Capture the field mappings of URL params and Invoice/Invoice Line Item object</description>
    <label>Invoice Generator Setting</label>
    <pluralLabel>Invoice Generator Settings</pluralLabel>
</CustomObject>