force-app/main/default/objects/Invoice_Generator_Setting__mdt/fields/Invoice_Line_Item_Field__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Field__c</fullName>
    <label>Invoice Line Item Field</label>
    <length>232</length>
    <type>Text</type>
</CustomField>