force-app/main/default/objects/Invoice_Generator_Setting__mdt/fields/URL_Param__c.field-meta.xml
<CustomField>
    <fullName>URL_Param__c</fullName>
    <label>URL Param</label>
    <length>232</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>